# scaneo

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  makefile  pyproject.toml
inference/: inference.ipynb  main.py
models/: Dockerfile  Dockerfile.gpu  main.py  test.ipynb
models/src/: dataframe.py  eotdl_wrapper.py  tools.py  utils.py
scaneo/: api.py  main.py
scaneo/routers/: annotations.py  campaigns.py  geojson.py  images.py  labels.py  models.py  plugins.py
scaneo/src/cache/: cache.py
scaneo/src/errors/: campaigns.py  labels.py
scaneo/src/image/: get_image_tile.py  image_utils.py
scaneo/src/models/: __init__.py  annotation.py  campaign.py  image.py  label.py  model.py  plugin.py
scaneo/src/repos/: AnnotationsDBRepo.py  CampaignDBRepo.py  CampaignsDBRepo.py  DBRepo.py  EOTDLRepo.py  ImagesDBRepo.py  LabelMappingsDBRepo.py  LabelsDBRepo.py  ModelsDBRepo.py  PluginsDBRepo.py  __init__.py
scaneo/src/stac/: __init__.py  stac.py
scaneo/src/storage/: local.py
scaneo/ui/: campaigns.html  docs.html  index.html  models.html  plugins.html
scaneo/ui/_app/: env.js  version.json
scaneo/ui/_docs/: index.html
scaneo/ui/campaigns/: campaign.html  create.html  export.html  index.html  label.html
scaneo/ui/docs/: 404.html  index.html
scaneo/ui/img/: classification.webm  detection.webm  label-selector.webm  sam.webm
scaneo/ui/models/: create.html  index.html  model.html
scaneo/ui/plugins/: index.html
scaneo_bck/: api.py  main.py
scaneo_bck/routers/: geojson.py  images.py
scaneo_bck/src/cache/: __init__.py
scaneo_bck/src/image/: __init__.py  cache.py  get_image_tile.py
scaneo_bck/src/storage/: cloud.py  eotdl.py  storage.py
scaneo_bck/ui/: index.html
scaneo_bck/ui/_app/: version.json
scaneo_bck/ui/img/: image-selector.webm
ui/: .env.example  .eslintrc.cjs  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json
ui/mkdocs/: mkdocs.yml
ui/mkdocs/docs/: ai_assisted_labelling.md  contributing.md  eotdl.md  exporting.md  getting_started.md  index.md  labelling_campaigns.md  labelling_interface.md  saving_and_exporting.md  tools.md
ui/src/components/: Card.svelte  CreateCard.svelte  DeleteBtn.svelte  ErrorMsg.svelte  ExportBtn.svelte  FileExplorer.svelte  LabelBtn.svelte  LoadBlockingOverlay.svelte  Loader.svelte  ManageBnt.svelte  (+2 more)
ui_bck/: mdsvex.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js
ui_bck/coverage/: index.html
ui_bck/tests/: mockValues.ts
(+1064 files in other folders)
