[tool.poetry]
name = "scaneo"
version = "2024.08.08-4"
description = "A labelling tool for satellite imagery"
authors = ["earthpulse <it@earthpulse.es>"]
readme = "README.md"
packages = [{include = "scaneo"}]

[tool.poetry.scripts]
scaneo = "scaneo.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
fastapi = "^0.90.0"
uvicorn = "^0.22.0"
rasterio = "^1.2.0"
shapely = "^1.7.1"
mercantile = "^1.2.1"
cachetools = "^5.3.1"
requests = "^2.32.3"
matplotlib = "^3.4.3"
tqdm = "^4.62.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
