[project]
name = "scaneo"
version = "2024.12.16"
description = "A labelling tool for satellite imagery"
authors = [
    {name = "earthpulse", email = "it@earthpulse.es"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "fastapi>=0.90.0",
    "uvicorn[standard]>=0.22.0",
    "rasterio>=1.2.0",
    "shapely>=1.7.1",
    "mercantile>=1.2.1",
    "cachetools>=5.3.1",
    "requests>=2.32.3",
    "matplotlib>=3.4.3",
    "tqdm>=4.62.3",
    "python-dotenv>=1.0.1",
]

[project.scripts]
scaneo = "scaneo.main:app"
scaneo-proxy = "scaneo.proxy:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scaneo"]